[project]
name = "ast-graph"
version = "0.1.0"
description = ""
authors = [
    {name = "quilix11",email = "nazarus8095@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rglob (>=1.7,<2.0)",
    "google (>=3.0.0,<4.0.0)",
    "google-genai (>=2.2.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
